# word_embeddings

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  main.py  pyproject.toml
models/: word2vec_abc_news.txt  word2vec_bigram_abc_news.txt
