[tool.poetry]
name = "word_embeddings"
version = "0.1.0"
description = ""
authors = ["Hans-Peter Schadler <hps@abyle.org>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
scikit-learn = "^0.24.1"
gensim = "^3.8.3"
wordcloud = "^1.8.1"
plotly = "^4.14.3"
streamlit = "^0.76.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
jupyterlab = "^3.0.9"
jupyter = "^1.0.0"
tensorboard = "^2.4.1"
tensorflow-text = "^2.4.3"
tqdm = "^4.58.0"
tensorflow-datasets = "^4.2.0"
tf-models-official = "^2.4.0"
pydot = "^1.4.2"
nltk = "^3.5"
spacy = "^3.0.3"
Pattern = "^3.6"
tensorflow = "^2.4.1"
scipy = "^1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
